--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,14 +14,15 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/repo
-
     environment:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
       TERM: dumb
 
     steps:
+      - run:
+          command: ls /home/circleci/aimachine-server/src/
+
       - checkout
 
       # Download and cache dependencies
