ls circleci dir

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
       - run:
-          command: ls /home/circleci/
+          command: ls /home/circleci/project
 
       - checkout
 
