--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
+    working_directory: ~/repo
+
     environment:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
@@ -21,11 +23,7 @@ jobs:
 
     steps:
       - run:
-          command: ls /home/circleci/project
-      - run:
-          command: ls ~/
-      - run:
-          command: ls ~/repo/
+          command: ls ~/repo
 
       - checkout
 
