--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,5 +41,8 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
+      - run:
+          command: ls ~/repo
+
       # run tests!
       - run: gradle test
