--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,9 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       - run:
+          command: ls ~/
+
+      - run:
           command: ls ~/repo
 
       # run tests!
