--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,4 +26,4 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle.kts" }}
 
-      - run: gradle test
+      - run: gradle check
