--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,11 @@
-version: 2
+version: 2.1
+
+workflows:
+  build_and_test:
+    jobs:
+      - build
+      - test
+
 jobs:
   build:
     docker:
@@ -26,4 +33,9 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle.kts" }}
 
+  test:
+    docker:
+      - image: circleci/openjdk:11-jdk
+    steps:
+      - checkout
       - run: gradle check
