--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,7 @@
-version: 2.1
-
-workflows:
-  lint-build-test:
-    jobs:
-      - lint
-      - build:
-          requires:
-            - lint
-      - test:
-          requires:
-            - build
+version: 2
 
 jobs:
-  lint:
+  static-analysis:
     docker:
       - image: circleci/openjdk:11-jdk
     steps:
@@ -23,15 +12,12 @@ jobs:
     docker:
       - image: circleci/openjdk:11-jdk
 
-    working_directory: ~/repo
-
     environment:
       JVM_OPTS: -Xmx3200m
       TERM: dumb
 
     steps:
       - checkout
-
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "build.gradle.kts" }}
@@ -39,13 +25,16 @@ jobs:
             - v1-dependencies-
 
       - run: gradle dependencies
-
       - save_cache:
           paths:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle.kts" }}
 
   test:
+    environment:
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
+
     docker:
       - image: circleci/openjdk:11-jdk
     steps:
