--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,7 @@
 version: 2
 
 jobs:
-  static-analysis:
-    docker:
-      - image: circleci/openjdk:11-jdk
-    steps:
-      - checkout
-      - run: gradle ktlintCheck
-
-  build:
+  analyse-build-test:
     docker:
       - image: circleci/openjdk:11-jdk
 
@@ -18,6 +11,7 @@ jobs:
 
     steps:
       - checkout
+      - run: gradle ktlintCheck
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "build.gradle.kts" }}
@@ -30,13 +24,4 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle.kts" }}
 
-  test:
-    environment:
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
-
-    docker:
-      - image: circleci/openjdk:11-jdk
-    steps:
-      - checkout
       - run: gradle test
